# limbdark

./: .gitignore  README.md  limbdark.py  pyproject.toml  setup.py
limbdark/: __init__.py  claret.py  cli.py  interpolator.py  limbdark.py  util.py
scripts/: limbdark
src/limbdark/data/: claret2012_all.txt
src/scripts/: limbdark
tests/: __init__.py  test_interpolation.py  test_interpolation_unittest.py
